--- a/css/styles.css
+++ b/css/styles.css
@@ -32,8 +32,34 @@ ul {
   background-size: cover;
   background-position: center;
   color: white;
-  padding: 188px 0;
-  max-width: 1440px;
+  padding: 112px 0;
+  margin: 0 auto;
+  max-width: 428px;
+  height: 432px;
+  text-align: center;
+}
+@media screen and (min-width: 768px) and (max-width: 1157.98px) {
+  .title {
+    max-width: 768px;
+    height: 436px;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/people-office.jpg);
+  }
+}
+@media screen and (min-width: 1158px) {
+  .title {
+    max-width: 1440px;
+    height: 600px;
+    padding: 188px 0;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/people-office.jpg);
+  }
 }
 .logo-name {
   color: #2e2f42;
@@ -78,6 +104,7 @@ ul {
   background-color: #f4f4fd;
   color: #2e2f42;
   font-size: 36px;
+  font-weight: 700;
   line-height: 1.11;
   text-align: center;
   letter-spacing: 0.02em;
@@ -86,26 +113,48 @@ ul {
 }
 .photo {
   display: flex;
-  gap: 24px;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 72px;
 }
 .valuables-list {
-  width: 264px;
   color: var(--navyblue, #2e2f42);
-  font-size: 20px;
+  font-family: "Roboto", sans-serif;
+  font-size: 36px;
   font-style: normal;
-  font-weight: 500;
-  line-height: 24px;
-  letter-spacing: 0.4px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  margin-bottom: 8px;
+  text-align: center;
 }
+@media only screen and (min-width: 768px) {
+  .valuables-list {
+    text-align: left;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .valuables-list {
+    display: flex;
+  }
+}
+
 .valuables-descr {
   width: 264px;
   color: var(--slate, #434455);
   font-size: 16px;
   font-style: normal;
-  font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0.32px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
+@media only screen and (min-width: 1158px) {
+  .valuables-descr {
+    font-weight: 400;
+  }
+}
+
 .valuables-list-descr {
   color: #434455;
   font-size: 16px;
@@ -194,6 +243,7 @@ ul {
 .footer-descr {
   color: #f4f4fd;
   line-height: 1.5;
+  font-size: 16px;
   letter-spacing: 0.02em;
   max-width: 264px;
 }
@@ -273,15 +323,14 @@ address {
   font-style: normal;
 }
 .wrapper {
-  font-size: 56px;
-  line-height: 60px;
+  font-size: 36px;
+  line-height: 1.11;
   text-align: center;
   letter-spacing: 0.02em;
   color: #ffffff;
-  max-width: 496px;
+  max-width: 320px;
   height: 120px;
-  margin: 0 auto;
-  margin-bottom: 48px;
+  margin: 0 auto 72px;
   font-weight: 700;
 }
 .valuables {
@@ -302,15 +351,21 @@ address {
   text-align: center;
 }
 .image-company-box {
+  display: none;
   background-color: #f4f4fd;
   border-radius: 4px;
   width: 264px;
   height: 112px;
   flex-shrink: 0;
   margin-bottom: 8px;
-  display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media only screen and (min-width: 1158px) {
+  .image-company-box {
+    display: flex;
+  }
 }
 
 .logo-icon {
@@ -345,33 +400,83 @@ address {
 
 .section-team {
   background-color: #f4f4fd;
-  padding: 120px 0;
+  min-height: 732px;
 }
 .specialists {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   background-color: #ffffff;
-  width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 0px;
 }
+
+@media only screen and (min-width: 768px) {
+  .photo {
+    row-gap: 64px;
+    column-gap: 24px;
+    flex-basis: calc((100% - 24px) / 2);
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .specialists {
+    display: inline-flex;
+  }
+}
+
+/* Phone screen */
+
 .container {
-  max-width: 1158px;
+  min-width: 320px;
+  max-width: 428px;
+  padding: 0 16px;
   margin: 0 auto;
-  padding: 0 15px;
+}
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .container {
+    max-width: 1158px;
+    padding: 0 15px;
+  }
 }
 .site-info {
   display: flex;
   align-items: center;
 }
 .logo-line {
-  display: flex;
+  display: inline-flex;
+  height: 24px;
   align-items: center;
-  margin-right: 332px;
+  flex-shrink: 0;
+  color: #4d5ae5;
+  font-family: "Raleway", sans-serif;
+  font-size: 18px;
+  line-height: 1.17;
+  font-weight: 800;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+@media only screen and (min-width: 1158px) {
+  .logo-line {
+    margin-right: 365px;
+  }
 }
 .menu {
   display: flex;
-  gap: 40px;
-  justify-content: flex-start;
+  align-items: center;
+  flex-direction: row;
+  gap: 120px;
+}
+@media only screen and (min-width: 1158px) {
+  .menu {
+    display: none;
+  }
 }
 .menu-contact {
   display: flex;
@@ -379,6 +484,12 @@ address {
   gap: 40px;
   flex-wrap: nowrap;
 }
+@media only screen and (min-width: 1158px) {
+  .menu-contact {
+    display: none;
+  }
+}
+
 img {
   display: block;
   max-width: 100%;
@@ -394,11 +505,7 @@ img {
 ::before {
   box-sizing: border-box;
 }
-.card-set {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 24px;
-}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -411,14 +518,44 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+/* Section 1 */
 .company-strategy {
-  padding: 120px 0;
+  padding: 96px 0;
 }
-.list-item {
-  width: calc((100% - 72px) / 4);
+
+@media screen and (min-width: 1158px) {
+  .company-strategy {
+    padding: 120px 0;
+  }
 }
+
+@media only screen and (min-width: 768px) {
+  .card-set {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 72px;
+    column-gap: 24px;
+  }
+  .list-item {
+    flex-basis: calc((100% - 24px) / 2);
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .list-item {
+    flex-basis: calc((100% - 72px) / 4);
+  }
+}
+
 .pictures {
+  margin-top: 0;
   padding-bottom: 120px;
+}
+@media only screen and (max-width: 1157.98px) {
+  .pictures {
+    display: none;
+  }
 }
 .picture-company {
   display: flex;
@@ -429,6 +566,11 @@ img {
 }
 .profession {
   padding: 32px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
 }
 .portfolio-class {
   border-bottom: 1px solid #e7e9fc;
@@ -506,23 +648,51 @@ img {
   fill: #f4f4fd;
 }
 .customers {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  margin-top: 96px;
+  padding-bottom: 72px;
 }
 .section-name {
   font-size: 36px;
+  font-weight: 700;
   line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
   color: #2e2f42;
   margin-bottom: 72px;
   text-align: center;
 }
 .clients {
   display: flex;
-  gap: 24px;
+  flex-wrap: wrap;
+  justify-content: center;
+  row-gap: 72px;
+  column-gap: 16px;
 }
 .client-pic {
-  width: calc((100% - 120px) / 6);
+  flex-basis: calc((100% - 16px) / 2);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   height: 88px;
+}
+@media only screen and (min-width: 768px) {
+  .customers .container {
+    padding: 0 92px;
+  }
+  .clients {
+    column-gap: 24px;
+    justify-content: center;
+  }
+  .client-pic {
+    flex-basis: calc((100% - 24px * 2) / 3);
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .customers .container {
+    padding: 0 0;
+  }
+  .client-pic {
+    flex-basis: calc((100% - 24px * 5) / 6);
+  }
 }
 .client-img {
   width: 100%;
@@ -544,12 +714,43 @@ img {
 
 .foot-class {
   display: flex;
-  align-items: baseline;
+  flex-wrap: wrap;
+  row-gap: 72px;
+  align-items: center;
   margin-right: 120px;
 }
 .logo-contain {
-  margin-right: 120px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+@media only screen and (min-width: 768px) {
+  .foot-class {
+    align-items: baseline;
+    padding: 0 92px;
+  }
+  .logo-contain {
+    display: block;
+    margin-right: 24px;
+  }
+  .social-media-class {
+    padding-left: 0;
+    padding-right: 80px;
+  }
+  .footer-bottom {
+    padding-left: 0;
+    justify-content: flex-start;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .logo-contain {
+    margin-right: 120px;
+  }
+  .foot-class {
+    padding: 0 0;
+  }
+}
+
 .social-m {
   font-weight: 500;
   font-size: 16px;
@@ -587,7 +788,8 @@ img {
   fill: currentColor;
 }
 .social-media-class {
-  margin-right: 80px;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Modal window */
@@ -650,6 +852,7 @@ img {
 .page-down {
   background-color: #2e2f42;
   padding: 100px 0;
+  min-height: 312px;
 }
 .port-footer {
   display: flex;
@@ -858,10 +1061,22 @@ img {
 }
 /* Footer form */
 .footer-bottom {
-  justify-content: space-between;
+  display: flex;
+  flex-direction: column;
+}
+@media only screen and (max-width: 767.98px) {
+  .social-media-class {
+    align-items: center;
+  }
+  .footer-bottom {
+    align-items: center;
+  }
+  .foot-class {
+    justify-content: center;
+  }
 }
 .button-form {
-  display: flex;
+  display: inline-flex;
   min-width: 165px;
   height: 40px;
   justify-content: center;
@@ -901,7 +1116,7 @@ img {
   color: #ffffff;
 }
 .footer-form-input {
-  width: 264px;
+  width: 100%;
   height: 40px;
   border-radius: 4px;
   border: 1px solid var(--white, #fff);
@@ -912,7 +1127,7 @@ img {
   font-size: 12px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  padding-left: 16px;
+  padding: 8px 16px;
 }
 .footer-form-input::placeholder {
   color: var(--white, #fff);
@@ -923,5 +1138,146 @@ img {
 .footer-form {
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 24px;
+}
+@media only screen and (max-width: 767.98px) {
+  .footer-form {
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 16px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .footer-form-input {
+    width: 264px;
+  }
+}
+.label-class {
+  width: 100%;
+}
+/* Mobile menu */
+.menu-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow-y: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100%;
+  padding: 80px 40px 40px 40px;
+  background-color: var(--primary-white-color);
+  z-index: 999;
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
+}
+.menu-container.is-open {
+  transform: translateX(0);
+}
+.menu-toggle {
+  min-height: 22px;
+  min-width: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  margin: 0;
+  padding: 24px 0;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
+
+.menu-toggle-close {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 24px;
+  right: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: #e7e9fc;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  flex-shrink: 0;
+  padding: 0;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media (max-width: 767.98px) {
+  .menu,
+  .address-info {
+    display: none;
+  }
+}
+@media (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+.menu-toggle:hover,
+.menu-toggle:focus {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+.mobile-menu:not(:last-child) {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+.mobile-line {
+  display: block;
+  font-family: Roboto, sans-serif;
+  color: var(--navyblue, #2e2f42);
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  font-weight: 700;
+  position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mobile-line:active {
+  color: var(--secondary-blue-color);
+}
+.email-tel-info {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  margin-bottom: 48px;
+}
+.tel-number {
+  font-family: Roboto, sans-serif;
+  color: var(--ocean, #404bbf);
+  font-size: 36px;
+  line-height: 1.11;
+  font-weight: 700;
+  letter-spacing: 0.02em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.email-adr {
+  font-family: Roboto, sans-serif;
+  color: var(--slate, #434455);
+  font-size: 20px;
+  line-height: 1.2;
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.social-mob-icon {
+  display: flex;
+  align-items: center;
+  gap: 56px;
+  flex-shrink: 0;
+}
+@media only screen and (max-width: 427.98px) {
+  .tel-number {
+    font-size: 24px;
+  }
+  .social-mob-icon {
+    gap: 24px;
+  }
 }
