--- a/css/styles.css
+++ b/css/styles.css
@@ -250,6 +250,7 @@ ul {
 .input-list {
   font-weight: 500;
   font-size: 16px;
+  font-family: Roboto, sans-serif;
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-decoration: none;
